video overflow fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,7 +73,7 @@ select {
   border-radius: 5px;
 }
 
-img {
+img, video {
   width: 100%;
   display: block;
   margin: 20px auto;
